--- a/auth/client/public/index.html
+++ b/auth/client/public/index.html
@@ -40,5 +40,9 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
+    <!-- Google Picker Tag -->
+    <script type="text/javascript" src="https://apis.google.com/js/api.js?onload=loadPicker"></script>
+    
   </body>
 </html>
