changed colors added button styling

--- a/auth/client/public/index.html
+++ b/auth/client/public/index.html
@@ -9,13 +9,13 @@
       name="description"
       content="Helpful guide for Coding BootCamp Students"
     />
-     <!-- bootstrap
+     <!-- bootstrap -->
      <link
      rel="stylesheet"
      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
      integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
      crossorigin="anonymous"
-   /> -->
+   />
 
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
